WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53029
WebKit2: LayoutTests: The UNIMPLEMENTED warnings in TextCheckerWin should be disabled
https://bugs.webkit.org/show_bug.cgi?id=53029
Summary
WebKit2: LayoutTests: The UNIMPLEMENTED warnings in TextCheckerWin should be ...
Jessie Berlin
Reported
2011-01-24 11:32:20 PST
They are showing up in the output of a lot of layout tests (e.g. plugins/access-after-page-destroyed.html), particularly due to the call in const TextCheckerState& TextChecker::state() { notImplemented(); return textCheckerState; } We should disable the UNIMPLEMENTED warnings in TextCheckerWin.cpp.
Attachments
Patch
(
deleted
)
2011-01-24 11:37 PST
,
Jessie Berlin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-01-24 11:35:57 PST
This can be done with #define DISABLE_NOT_IMPLEMENTED_WARNINGS 1
Jessie Berlin
Comment 2
2011-01-24 11:37:08 PST
Created
attachment 79946
[details]
Patch
Jessie Berlin
Comment 3
2011-01-24 13:03:34 PST
Comment on
attachment 79946
[details]
Patch Committed in
r76543
http://trac.webkit.org/changeset/76543
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug